# fork_opensecura_sw_kelvin

./: .bazelrc  BUILD  CONTRIBUTING.md  README.md  WORKSPACE  cv_test.dump
benchmarks/: BUILD  benchmark.h  benchmark_kelvin.cc  benchmark_sec.c  benchmark_smc.c  benchmarks.bzl  cycle_count.h
build_tools/: BUILD  core_sim_test_runner.sh  test_runner.sh
build_tools/bazel/: kelvin.bzl  repos.bzl
crt/: BUILD  CMakeLists.txt  crt.S  kelvin.h  kelvin.ld  kelvin_gloss.cc  kelvin_intrinsics.h  kelvin_start.S  kelvin_tcm.ld  kelvin_tcm_cv.ld  kelvin_tcm_highmem.ld  log.h  printf_traits.h
docs/: kelvin_isa.md  tflm_ops.md
examples/cv_test/: BUILD  cv_test.c  cv_test.py  memory_layout.h  yu12toyv12.c  yu12toyv12.py
examples/hello_world/: BUILD  hello_world.c
host_tools/: BUILD  encoding_main.cc
tests/cv/: BUILD  diff.cc  diff.h  diff_test.cc  downsample.cc  downsample.h  downsample_test.cc  extrema.cc  extrema.h  extrema_test.cc  gaussian.cc  gaussian.h  gaussian_test.cc  shift_gaussian.cc  shift_gaussian.h  shift_gaussian_test.cc  test_helper.h  upsample.cc  upsample.h  upsample_test.cc
tests/kelvin_isa/: BUILD  acset.cc  actr.cc  ecall.cc  getvl_test.cc  illegal.cc  instr_align_0.cc  instr_align_1.cc  instr_align_2.cc  instr_fault.cc  kelvin_test.h  load_fault_0.cc  load_fault_1.cc  mret_fault.cc  perf_counters.cc  store_fault_0.cc  store_fault_1.cc  vacc.cc  vadd.cc  valu.cc  vcmp.cc  vdwconv.cc  vdwconv_data.h  vevn_vodd.cc  vld.cc  vmax_vmin.cc  vmul.cc  vmv.cc  vpadd.cc  vsel.cc  vshift.cc  vslide.cc  vsrn.cc  vst.cc  vstq.cc  vzip.cc
tests/tflm/: BUILD
(+69 files in other folders)
